# rpcpp_samples

./: .appveyor.yml  .gitignore  CMakeLists.txt  LICENSE.md  README.md  appveyor.yml  azure-pipelines.yml
00-Loading-The-Pipeline/: CMakeLists.txt
00-Loading-The-Pipeline/src/: main.cpp
01-Crytek-Sponza/: CMakeLists.txt
01-Crytek-Sponza/src/: main.cpp
01-Material-Demo/: CMakeLists.txt
01-Material-Demo/src/: main.cpp
02-San-Miguel/: CMakeLists.txt
02-San-Miguel/src/: main.cpp
03-Lights/: CMakeLists.txt
03-Lights/src/: main.cpp
03-Shading-Models-VR/: CMakeLists.txt
03-Shading-Models-VR/src/: main.cpp
06-Car/: CMakeLists.txt
06-Car/src/: main.cpp
07-Shading-Models/: CMakeLists.txt
07-Shading-Models/src/: main.cpp
10-Plugin/: CMakeLists.txt
10-Plugin/config/: config.yaml
10-Plugin/resources/: config.yaml
10-Plugin/src/: plugin.cpp  plugin.hpp  sample_stage.cpp  sample_stage.h
11-Crytek-Sponza/: CMakeLists.txt
11-Crytek-Sponza/src/: main.cpp
11-Instancing/: CMakeLists.txt
11-Instancing/src/: main.cpp
12-San-Miguel/: CMakeLists.txt
12-San-Miguel/src/: main.cpp
13-Shading-Models-VR/: CMakeLists.txt
13-Shading-Models-VR/src/: main.cpp
20-Instancing-Flex/: CMakeLists.txt
20-Instancing-Flex/src/: main.cpp
cmake/: FindFlex.cmake  FindLUI.cmake  FindNvFlex.cmake  FindOpenVR.cmake  FindPackages.cmake  FindRenderPipeline.cmake  FindViveSR.cmake  Findpanda3d.cmake  debugging-information.cmake  windows_utils.cmake
lui_demos/: CMakeLists.txt
lui_demos/01_MinimalExample/: CMakeLists.txt
nvidia_flex/: CMakeLists.txt
nvidia_flex/01-Initial-Overlap/: CMakeLists.txt
nvidia_flex/01-Initial-Overlap/src/: helpers.hpp  main.cpp  mesh.hpp  scene.hpp
nvidia_flex/01-Instancing-Flex/: CMakeLists.txt
nvidia_flex/01-Instancing-Flex/src/: main.cpp
nvidia_flex/Flex-Adhesion/: CMakeLists.txt
nvidia_flex/Flex-Adhesion/src/: main.cpp  scene.hpp
nvidia_flex/Flex-Dam-Break/: CMakeLists.txt
nvidia_flex/Flex-Dam-Break/src/: main.cpp  scene.hpp
nvidia_flex/Flex-Friction-Ramp/: CMakeLists.txt
nvidia_flex/Flex-Friction-Ramp/src/: main.cpp  scene.hpp
nvidia_flex/Flex-Initial-Overlap/: CMakeLists.txt
nvidia_flex/Flex-Initial-Overlap/src/: main.cpp  mesh.hpp  scene.hpp
nvidia_flex/Flex-Instancing-Flex/: CMakeLists.txt
nvidia_flex/Flex-Instancing-Flex/src/: main.cpp
nvidia_flex/common/: helpers.hpp  maths.hpp  mesh.hpp
nvidia_flex/resources/config/: plugins.yaml
panda3d_samples/: CMakeLists.txt  README.md
panda3d_samples/chorusline/: CMakeLists.txt
panda3d_samples/chorusline/src/: main.cpp
panda3d_samples/empty-wo-rpcpp/: CMakeLists.txt
panda3d_samples/empty-wo-rpcpp/src/: main.cpp
panda3d_samples/looking-and-gripping/: CMakeLists.txt
panda3d_samples/looking-and-gripping/src/: main.cpp  scene.cpp  scene.hpp
panda3d_samples/music-box/: CMakeLists.txt
panda3d_samples/music-box/src/: main.cpp
render_pipeline_samples/: CMakeLists.txt  README.md
render_pipeline_samples/00-Loading-The-Pipeline/: CMakeLists.txt
render_pipeline_samples/00-Loading-The-Pipeline/src/: main.cpp
render_pipeline_samples/01-Material-Demo/: CMakeLists.txt
render_pipeline_samples/01-Material-Demo/src/: main.cpp
render_pipeline_samples/02-Roaming-Ralph/: CMakeLists.txt
render_pipeline_samples/02-Roaming-Ralph/src/: main.cpp
render_pipeline_samples/03-Lights/: CMakeLists.txt
render_pipeline_samples/03-Lights/src/: main.cpp
render_pipeline_samples/06-Car/: CMakeLists.txt
render_pipeline_samples/06-Car/src/: main.cpp
render_pipeline_samples/07-Shading-Models/: CMakeLists.txt
render_pipeline_samples/07-Shading-Models/src/: main.cpp
render_pipeline_samples/08-Terrain/: CMakeLists.txt
render_pipeline_samples/08-Terrain/src/: main.cpp
render_pipeline_samples/10-Plugin/: CMakeLists.txt
render_pipeline_samples/10-Plugin/src/: plugin.cpp  plugin.hpp  sample_stage.cpp  sample_stage.h
render_pipeline_samples/11-Instancing/: CMakeLists.txt
render_pipeline_samples/11-Instancing/src/: main.cpp
resources/etc/rpsamples/ar/: plugins.yaml  stages.yaml
resources/etc/rpsamples/default/: plugins.yaml
resources/etc/rpsamples/vivesr/: pipeline.yaml  plugins.yaml  stages.yaml
resources/etc/rpsamples/vr/: plugins.yaml
resources/models/Hamburger/: LICENSE.md
rpcpp_samples/: CMakeLists.txt
rpcpp_samples/Assimp-Models/: CMakeLists.txt
rpcpp_samples/Assimp-Models/src/: main.cpp  main.hpp
rpcpp_samples/ImGui/: CMakeLists.txt  README.md
rpcpp_samples/ImGui/resources/config/: panda3d-config.prc  plugins.yaml
rpcpp_samples/ImGui/src/: main.cpp  main.hpp
rpcpp_samples/OpenVR/: CMakeLists.txt
rpcpp_samples/OpenVR-AR/: CMakeLists.txt
rpcpp_samples/OpenVR-AR/src/: main.cpp  main.hpp  world.cpp  world.hpp
rpcpp_samples/OpenVR-Tracked-Camera/: CMakeLists.txt
rpcpp_samples/OpenVR-Tracked-Camera/src/: main.cpp  main.hpp  world.cpp  world.hpp
rpcpp_samples/OpenVR/src/: main.cpp  main.hpp  world.cpp  world.hpp
rpcpp_samples/Panda3D-Chorusline/: CMakeLists.txt
rpcpp_samples/Panda3D-Chorusline/src/: main.cpp
rpcpp_samples/Panda3D-Shadows/: CMakeLists.txt
rpcpp_samples/Panda3D-Shadows/src/: main.cpp
rpcpp_samples/Shading-Models-VR/: CMakeLists.txt
rpcpp_samples/Shading-Models-VR/resources/config/: pipeline.yaml  plugins.yaml
rpcpp_samples/Shading-Models-VR/src/: main.cpp
rpcpp_samples/ViveSR/: CMakeLists.txt
rpcpp_samples/ViveSR/src/: main.cpp  main.hpp
snippets/: CMakeLists.txt
snippets/GUIs/: CMakeLists.txt  README.md
snippets/GUIs/src/: main.cpp  main_ui.cpp  main_ui.hpp
snippets/primitives/: CMakeLists.txt
snippets/primitives/src/: main.cpp  world.cpp  world.hpp
snippets/texture_and_material/: CMakeLists.txt  README.md
snippets/texture_and_material/src/: main.cpp  world.cpp  world.hpp
