# Author: Younguk Kim (bluekyu)
# Date  : 2017-05-12

cmake_minimum_required(VERSION 3.6)
project(lui_demos)

# === configure ====================================================================================
if(NOT TARGET lui)
    find_package(LUI REQUIRED)
endif()

add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/01_MinimalExample")
# ==================================================================================================

# === install ======================================================================================
# ==================================================================================================
