# Author: Younguk Kim (bluekyu)

cmake_minimum_required(VERSION 3.10.2)
project(panda3d_samples
    LANGUAGES NONE
)

# === configure ====================================================================================
add_subdirectory("chorusline")
add_subdirectory("empty-wo-rpcpp")
add_subdirectory("looking-and-gripping")
add_subdirectory("music-box")
# ==================================================================================================

# === install ======================================================================================
# ==================================================================================================
