# Author: Younguk Kim (bluekyu)
# Date  : 2017-05-12

cmake_minimum_required(VERSION 3.6)
project(render_pipeline_samples)

# === configure ====================================================================================
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/Shading-Models-VR")
# ==================================================================================================

# === install ======================================================================================
# ==================================================================================================
